# Multi-Agent-Game-Arena

./: .claudeignore  .env.example  .gitignore  LICENSE  README.md  maga.spec  pyproject.toml  requirements.txt  run.py  start.bat  start.py
.github/workflows/: build-exe.yml
config/: defaults.json  models.json  settings.yaml
engine/: __init__.py  arena.py  dm_interface.py  hooks.py  memory.py  player_agent.py  router.py  schema.py  state_machine.py  turn_manager.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
games/_template/: config.json  dm_prompt.jinja2  player_prompt.jinja2  rules.md
games/blind_bidding/: RULES.md  config.json  dm_prompt.jinja2  hooks.py  player_prompt.jinja2
games/bomb_collar/: RULES.md  config.json  dm_prompt.jinja2  hooks.py  player_prompt.jinja2
games/bomb_collar_v2/: RULES.md  config.json  dm_prompt.jinja2  hooks.py  player_prompt.jinja2
games/business_espionage/: config.json  dm_prompt.jinja2  player_prompt.jinja2  rules.md
games/greedy_mine/: config.json  dm_prompt.jinja2  hooks.py  player_prompt.jinja2
games/greedy_mine_v2/: RULES.md  config.json  dm_prompt.jinja2  hooks.py
games/horse_race/: RULES.md  config.json  dm_prompt.jinja2  hooks.py  player_prompt.jinja2
games/loot_share/: RULES.md  config.json  dm_prompt.jinja2  hooks.py  (+1 more)
scripts/: new_game.py
server/: __init__.py  main.py  ws_manager.py
tests/: __init__.py  conftest.py  test_arena.py  test_config.py  test_engine_api.py  test_memory.py  test_schema.py  test_werewolf.py  test_werewolf_human.py
(+43 files in other folders)
